syntax = "proto3";
import "google/protobuf/empty.proto";
package movie;

message MovieItem {
  string index = 1;
  string title = 2;
  int32 year = 3;
  string genre = 4;
}

message GetMoviesResponse { repeated MovieItem movies = 1; }

message AddMovieRequest {
  string title = 2;
  int32 year = 3;
  string genre = 4;
}

message DeleteMovieRequest { string index = 1; }

service Movie {
  rpc GetMovies(google.protobuf.Empty) returns (GetMoviesResponse);
  rpc AddMovie(AddMovieRequest) returns (google.protobuf.Empty);
  rpc EditMovie(MovieItem) returns (google.protobuf.Empty);
  rpc DeleteMovie(DeleteMovieRequest) returns (google.protobuf.Empty);
}
